--- a/development/scss/style.scss
+++ b/development/scss/style.scss
@@ -1,7 +1,125 @@
 @import 'bootstrap';
 @import 'font-awesome.min';
 
+$color1: #407ec9;
+$color2: #64a70b;
+$color3: #002b49;
+$color4: #444;
+
+$font1: 'Open Sans', sans-serif;
+$font2: 'Coda', sans-serif;
+
+$tracking: .05em;
+
+$weight1: 300;
+$weight2: 400;
+$weight3: 600;
+
+
 body {
-	background: #000;
+	font-family: $font1;
+	font-weight: $weight2;
+	letter-spacing: $tracking;
+	font-size: 16px;
 }
+
+.headline {
+	font-size: 4.36em;
+	font-weight: $weight1;
+	text-transform: uppercase;
+}
+
+h1 {
+	font-family: $font2;
+	font-size: 2.18em;
+	text-transform: uppercase;
+}
+
+h2 {
+	font-size: 1.63em;
+	text-transform: uppercase;
+	font-weight: $weight3;
+}
+
+h3 {
+	font-size: 1.45em;
+	font-weight: $weight3;
+}
+
+h4 {
+	font-size: 1.45em;
+	font-weight: $weight1;
+}
+
+h5 {
+	font-family: $font2;
+	font-size: 1.27em;
+}
+
+h6 {
+	font-size: 1.27em;
+}
+
+p {
+	font-size: 1em;
+	line-height: 1.63em;
+}
+
+a:link, a:visited, a:active, a:target {
+	font-weight: $weight3;
+	text-transform: uppercase;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: none;
+}
+
+/* lists */
+
+ul {
+	padding: 0;
+}
+
+li {
+	list-style: none;
+}
+
+/* header */
+
+header {
+	font-size: 1.27em;
+}
+
+header ul {
+	float: right;
+	padding-right: 25px;
+	vertical-align: middle;
+}
+
+header ul li, footer ul li {
+	margin: 0 10px;
+	padding: 15px;
+	float: left;
+}
+
+header img {
+	float: left;
+	width: 25%;
+	padding-left: 35px;
+}
+
+.social {
+	background: $color3;
+	margin-bottom: 25px;
+}
+
+nav a:hover {
+	border-bottom: solid 3px $color3;
+}
+
+
+
+
+
 
