--- a/development/scss/style.scss
+++ b/development/scss/style.scss
@@ -3,14 +3,14 @@
 
 $color1: #407ec9;
 $color2: #64a70b;
-$color3: #002b49;
+$color3: rgb(0, 43, 73);
 $color4: #444;
 $color5: #fff;
 $color6: rgb(255, 130, 0);
 
 $color1-trans: #407ec9;
 $color2-trans: #64a70b;
-$color3-trans: #002b49;
+$color3-trans: rgba(0, 43, 73, .7);
 $color4-trans: #444;
 $color5-trans: #fff;
 $color6-trans: rgba(255, 130, 0, .7);
@@ -25,6 +25,14 @@ $weight1: 300;
 $weight2: 400;
 $weight3: 600;
 
+/* layout */
+
+img {
+	width: 80%;
+	margin: 0 10%;
+}
+
+ /* typography */
 
 body {
 	font-family: $font1;
@@ -33,11 +41,16 @@ body {
 	font-size: 16px;
 }
 
+header {
+	font-size: 1.27em;
+}
+
 .headline {
 	font-size: 3em;
 	font-weight: $weight1;
 	text-transform: uppercase;
 	text-align: center;
+	padding-top: 25px;
 }
 
 h1 {
@@ -86,6 +99,47 @@ a:hover {
 	text-decoration: none;
 }
 
+li {
+	line-height: 1.63em;
+}
+
+button {
+	text-transform: uppercase;
+}
+
+/* color */
+
+body {
+	color: $color5;
+}
+
+button {
+	background-color: $color5;
+	color: $color4;
+	border: outset 3px $color2;
+}
+
+nav a:link, nav a:visited, nav a:active, nav a:target {
+	color: $color3;
+}
+
+nav a:hover {
+	color: $color2;
+}
+
+.social a:link, .social a:visited, .social a:active, .social a:target {
+	color: $color1;
+}
+
+.social a:hover {
+	color: $color5;
+}
+
+
+footer p {
+	color: $color4;
+}
+
 /* lists */
 
 ul {
@@ -96,10 +150,24 @@ li {
 	list-style: none;
 }
 
+.product li:before {
+	content: '-';
+}
+
+.product li img {
+	float: left;
+}
+
+/* button */
+
+button {
+	width: 100%;
+}
+
 /* header */
 
 header {
-	font-size: 1.27em;
+	margin-bottom: 25px;
 }
 
 header ul {
@@ -118,37 +186,29 @@ header img {
 	float: left;
 	width: 25%;
 	padding-left: 35px;
+	margin: 0 auto;
 }
 
 .social {
 	background: $color3;
-	margin-bottom: 25px;
+	margin-bottom: 45px;
 }
 
-/* color */
+/* footer */ 
 
-nav a:link, nav a:visited, nav a:active, nav a:target {
-	color: $color3;
-}
 
-nav a:hover {
-	color: $color2;
-}
-
-.social a:link, .social a:visited, .social a:active, .social a:target {
-	color: $color1;
-}
-
-.social a:hover {
-	color: $color5;
-}
 
 /* home */
+
+.banner {
+	margin-bottom: 25px;
+}
 
 .full-image {
 	background-image: url(../img/field1.jpg);
 	-webkit-background-size: 100%;
 	background-size: 100%;
+	background-attachment: fixed;
 }
 
 .edge-ad {
@@ -160,6 +220,18 @@ nav a:hover {
 	width: 70%;
 	margin: 25px 15%;
 }
+
+.featured-content {
+	width: calc(100% - 10%);
+	background-color: $color3-trans;
+	padding: 25px;
+	margin: 0 5%;
+}
+
+
+
+
+
 
 
 
