--- a/development/scss/style.scss
+++ b/development/scss/style.scss
@@ -110,13 +110,20 @@ button {
 /* color */
 
 body {
+	background: $color5;
 	color: $color4;
 }
 
 button {
-	background-color: $color5;
-	color: $color4;
-	border: outset 3px $color2;
+	background-color: $color3;
+	color: $color5;
+	border: outset 3px $color1;
+	outline: none;
+}
+
+button:active {
+	border: inset 3px $color1;
+	outline: none;
 }
 
 nav a:link, nav a:visited, nav a:active, nav a:target {
@@ -179,7 +186,7 @@ button {
 /* header */
 
 header {
-	margin-bottom: 25px;
+	margin-bottom: 5px;
 }
 
 header ul {
@@ -197,13 +204,13 @@ header ul li, footer ul li {
 header img {
 	float: left;
 	width: 100%;
-	padding-left: 35px;
+	padding: 25px;
 	margin: 0 auto;
 }
 
 .social {
-	background: $color3;
-	margin-bottom: 30px;
+	margin-bottom: 5px;
+	font-size: 1em;
 }
 
 
@@ -214,25 +221,32 @@ header img {
 /* home */
 
 .banner {
-	margin: 0 5% 25px 5%;
+	margin: 0 5% 15px 5%;
 	width: calc(100% - 10%);
 	
 }
 
 .full-image {
-	background-image: url(../img/field_texture.png);
+	background-image: url(../img/field1.JPG);
+	-webkit-background-size: cover;
+	background-size: cover;
 	background-attachment: fixed;
 	background-color: $color2;
 }
 
 .edge-ad {
-	background-color: $color6-trans;
+	background-color: $color6;
 	text-align: center;
+	font-size: .75em;
 }
 
 .edge-ad img {
-	width: 70%;
-	margin: 25px 15%;
+	width: 90%;
+	margin: 0 5%;
+}
+
+.edge-ad div {
+	margin: 25px 0 15px 0;
 }
 
 .featured-content {
