accessories not included

--- a/development/scss/style.scss
+++ b/development/scss/style.scss
@@ -47,3 +47,16 @@ iframe {
 header {
 	margin-bottom: 25px;
 }
+
+.breadcrumb {
+	background: none;
+
+}
+
+.navbar {
+	background: #fff;
+}
+
+img {
+	max-width: 100%;
+}
