--- a/css/style.css
+++ b/css/style.css
@@ -11951,28 +11951,58 @@ footer {
   header.carousel .carousel {
     height: 70%; } }
 
+p, li {
+  font-family: 'Open Sans', sans-serif; }
+
+body {
+  font-family: 'Open Sans Condensed', sans-serif; }
+
+nav li, footer p, .picture-text, .product, .btn {
+  font-family: 'Open Sans Condensed', sans-serif;
+  text-transform: uppercase; }
+
+nav, footer {
+  font-size: 1.25em; }
+
+footer {
+  background: #fff; }
+
+.picture-text {
+  font-size: 4em;
+  color: #fafafa; }
+
+.product h4 {
+  font-size: 2em; }
+
+.nav > li > a:link, .nav > li > a:visited {
+  color: #333; }
+
+.nav > li > a:hover, .nav > li > a:active, .nav > li > a:target {
+  background: #fafafa;
+  color: #f7913b; }
+
 #site-logo {
   max-width: 80%; }
 
-.edge-logo {
-  max-width: 80%;
-  margin: 0 10%; }
-
 .social {
-  margin-bottom: 10px; }
+  margin: 20px 0 10px 0; }
 
 .social ul {
   margin: 0;
-  padding-left: 0; }
+  padding-left: 0;
+  float: right; }
 
 .social ul li {
   float: left;
   list-style: none;
-  margin-right: 25px;
-  font-size: 1.2em; }
+  margin-left: 25px;
+  font-size: 1em; }
 
 .social ul li:first-of-type {
   margin-left: 0; }
+
+.nav {
+  margin-bottom: 15px; }
 
 .page-header {
   float: right; }
@@ -11983,6 +12013,9 @@ footer {
 iframe {
   width: 100%;
   margin: 10px 0; }
+
+.iframe-large {
+  height: 400px; }
 
 header {
   margin-bottom: 25px; }
@@ -11995,3 +12028,70 @@ header {
 
 img {
   max-width: 100%; }
+
+.title {
+  padding-bottom: 5px;
+  border-bottom: solid 1.5px #eee; }
+
+.page-header {
+  border-bottom: none;
+  color: #f7913b; }
+
+.first-on-page {
+  margin: 65px 0; }
+
+.panel-home {
+  background: rgba(250, 250, 250, 0.8); }
+
+.panel-home > .panel-heading {
+  background: rgba(250, 250, 250, 0.8); }
+
+.panel-default {
+  border: none; }
+
+.panel-default > .edge {
+  background: #f7913b; }
+
+.home {
+  background-image: url(../img/25manual/IMG_0264.JPG);
+  background-attachment: fixed;
+  -webkit-background-size: 100%;
+  background-size: 100%; }
+
+button {
+  margin: 25px 0; }
+
+.btn-default {
+  background-color: #337ab7;
+  color: #fafafa; }
+
+.btn-default:hover {
+  background-color: #286090;
+  color: #fafafa; }
+
+.btn {
+  border-radius: 0px;
+  border: none;
+  font-size: 1.5em;
+  letter-spacing: .5px; }
+
+.btn-primary {
+  border: none; }
+
+h6 {
+  font-size: 1em;
+  line-height: 1.25em; }
+
+.edge-ad {
+  background-color: #f7913b; }
+
+.edge-ad p {
+  text-align: center;
+  color: #fafafa; }
+
+.edge-ad img {
+  width: 80%;
+  margin: 10%; }
+
+.offer {
+  color: #337ab7; }
