--- a/development/scss/style.scss
+++ b/development/scss/style.scss
@@ -2,42 +2,31 @@
 @import '_bootstrap.min';
 @import '_modern-business';
 
-$color1: rgb(247, 145, 59);
+$color1: rgb(247, 145, 59); 
 $color2: #333;
 $color3: rgb(250,250,250);
 $color4: #337ab7;
 $color5: #286090;
+$color6: #999;
 
 $color3-trans: rgba(250,250,250,.8);
 
-p, li {
-	font-family: 'Open Sans', sans-serif;
-}
+/* color */
 
 body {
-	font-family: 'Open Sans Condensed', sans-serif;
-}
-
-nav li, footer p, .picture-text, .product, .btn {
-	font-family: 'Open Sans Condensed', sans-serif;
-	text-transform: uppercase;
-}
-
-nav, footer {
-	font-size: 1.25em;
+	color: $color2;
 }
 
 footer {
 	background: #fff;
 }
 
-.picture-text {
-	font-size: 4em;
-	color: $color3;
+.breadcrumb {
+	background: none;
 }
 
-.product h4 {
-	font-size: 2em;
+.navbar {
+	background: #fff;
 }
 
 .nav > li > a:link, .nav > li > a:visited {
@@ -49,9 +38,248 @@ footer {
 	color: $color1;
 }
 
+.dropdown-menu >li > a:hover {
+	color: $color6;
+}
+
+
+.social a:link, .social a:visited, .social a:target {
+	color: $color6;
+}
+
+.social li:last-of-type a:link, .social li:last-of-type a:visited, .social li:last-of-type a:target {
+	color: $color3;
+}
+
+.social ul li a:hover, .social li:last-of-type a:hover {
+	color: $color4;
+}
+
+.fa-shopping-cart {
+	background: $color5;
+}
+
+
+.title {
+	border-bottom: solid 1.5px $color6;
+}
+
+.picture-text {
+	color: $color3;
+}
+
+.page-header {
+	border-bottom: none;
+	color: $color1;
+}
+
+.offer {
+	color: $color4;
+}
+
+
+.edge-ad {
+	background-color: $color1;
+}
+
+.edge-ad h4 {
+	color: $color4;
+}
+
+
+.panel-home {
+	background: $color3-trans;
+}
+
+.panel-home > .product {
+	color: $color3;
+	background-color: $color2;
+}
+
+.panel-default {
+	border: none;
+}
+
+.btn {
+	background-color: $color4;
+	color: $color3;
+}
+
+.btn:hover {
+	background-color: $color5;
+	color: $color3;
+}
+
+.btn-features {
+	background-color: $color2;
+	color: $color3;
+}
+
+/* typography */
+
+body, .product h1 {
+	font-family: 'Open Sans', sans-serif;
+}
+
+nav li, footer p, .picture-text, .product, .btn, .featured-list, h1, h2, h3, h4, h5, h6 {
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
+nav, footer {
+	font-size: 1.25em;
+}
+
+h1 {
+	line-height: 2em;
+}
+
+h6 {
+	font-size: 1em;
+	line-height: 1.25em;
+}
+
+.social ul li {
+	font-size: 1.2em;
+}
+
+.picture-text {
+	font-size: 4em;
+}
+
+.edge-ad h4 {
+	text-align: center;
+	letter-spacing: 1px;
+}
+
+.btn {
+	font-size: 1.5em;
+	letter-spacing: .5px;
+}
+
+.btn-features {
+	font-size: 1.125em;
+	font-weight: 300;
+}
+
+.btn-donate h4 {
+	line-height: .43em;
+}
+
+.featured-list {
+	font-size: 1.125em;
+}
+
+.offer {
+	text-align: center;
+}
+
+
+.panel-home > .product {
+	text-align: center;
+	font-weight: 700;
+	letter-spacing: 2px;
+	font-size: 3em;
+
+}
+
+.product h4 {
+	font-size: 2em;
+}
+
+.center {
+	text-align: center;
+}
+
+.dropdown-menu li {
+	font-size: 1.35em;
+}
+
+
+/************************/
+/******** GLOBAL ********/
+/************************/
+
+
+/* links */
+
+a:hover {
+	text-decoration: none;
+}
+
+/* lists */
+
+ul {
+	padding-left: 15px;
+}
+
+li {
+	list-style: outside square;
+}
+
+.featured-list {
+	margin-top: 10px;
+}
+
+.featured-list li {
+	margin-bottom: 5px;
+}
+
+.dropdown-menu li {
+	margin: 6px 0;
+}
+
+/* images */
+
+img {
+	max-width: 100%;
+}
+
+/* media */
+
+iframe {
+	width: 100%;
+	margin: 10px 0;
+}
+
+.iframe-large {
+	height: 400px;
+}
+
+/* buttons */
+
+.btn {
+	margin-bottom: 15px;
+}
+
+.btn, .btn-primary {
+	border-radius: 0px;
+	border: none;
+}
+
+.btn-features {
+	margin: 15px 7px 0 0;
+	padding: 4px 7px;
+}
+
+.btn-donate {
+	padding: 10px 0 15px; 
+}
+
+.btn-order {
+	margin-top: 1.5em;
+}
+
+/************************/
+/******** HEADER ********/
+/************************/
+
 #site-logo {
 	max-width: 80%;
 }
+
+/* social media */
 
 .social {
 	margin: 20px 0 10px 0;
@@ -67,132 +295,79 @@ footer {
 	float: left;
 	list-style: none;
 	margin-left: 25px;
-	font-size: 1em;;
 }
 
 .social ul li:first-of-type {
 	margin-left: 0;
 }
 
+.fa-shopping-cart {
+	padding: 5px 7px;
+	border-radius: 25%;
+}
+
+/* navigation */
+
+nav li {
+	list-style: none;
+}
+
 .nav {
 	margin-bottom: 15px;
+}
+
+/*********************************/
+/******** SPECIFIC IMAGES ********/
+/*********************************/
+
+.edge-ad img {
+	width: 70%;
+	margin: 40px 15% 10px 15%;
+}
+
+.btn-donate img {
+	width: 80%;
+	margin: 0 10%;
+}
+
+/************************/
+/******** LAYOUT ********/
+/************************/
+
+.first-row {
+	margin: 65px 0 0;
 }
 
 .page-header {
 	float: right;
 }
 
+.page-header:after {
+	display: table;
+	content: '';
+	clear: both;
+}
+
 .left {
 	float: left;
 }
 
-iframe {
-	width: 100%;
-	margin: 10px 0;
+.right {
+	text-align: right;
 }
 
-.iframe-large {
-	height: 400px;
-}
 
-header {
-	margin-bottom: 25px;
-}
-
-.breadcrumb {
-	background: none;
-
-}
-
-.navbar {
-	background: #fff;
-}
-
-img {
-	max-width: 100%;
-}
-
-.title {
-	padding-bottom: 5px;
-	border-bottom: solid 1.5px #eee;
-}
-
-.page-header {
-	border-bottom: none;
-	color: $color1;
-}
-
-.first-on-page {
-	margin: 65px 0;
-}
-
-.panel-home {
-	background: $color3-trans;
-}
-
-.panel-home > .panel-heading {
-	background: $color3-trans;
-}
-
-.panel-default {
-	border: none;
-}
-
-.panel-default > .edge {
-	background: $color1;
-}
 
 .home {
-	background-image: url(../img/25manual/IMG_0264.JPG);
-	background-attachment: fixed;
+	background-image: url(../img/25manual/IMG_0258-crop.JPG);
 	-webkit-background-size: 100%;
 	background-size: 100%;
 }
 
-button {
-	margin: 25px 0;
+.panel-home > .product {
+	padding-bottom: 15px;
 }
 
-.btn-default {
-	background-color: $color4;
-	color: $color3;
-}
-
-.btn-default:hover {
-	background-color: $color5;
-	color: $color3;
-}
-
-.btn {
-	border-radius: 0px;
-	border: none;
-	font-size: 1.5em;
-	letter-spacing: .5px;
-}
-
-.btn-primary {
-	border: none;
-}
-
-h6 {
-	font-size: 1em;
-	line-height: 1.25em;
-}
-
-.edge-ad {
-	background-color: $color1;
-}
-
-.edge-ad p {
-	text-align: center;
-	color: $color3;
-}
-
-.edge-ad img {
-	width: 80%;
-	margin: 10%;
-}
-
-.offer {
-	color: $color4;
+.title {
+	margin-bottom: 22px;
 }
