--- a/development/scss/style.scss
+++ b/development/scss/style.scss
@@ -3,11 +3,11 @@
 @import '_modern-business';
 
 $color1: rgb(247, 148, 30);
-$color2: #333;
+$color2: rgb(50, 54, 56);
 $color3: rgb(250,250,250);
 $color4: #337ab7;
 $color5: #286090;
-$color6: #999;
+$color6: rgb(70, 85,93);
 $edgecolor2: rgb(28, 117, 188);
 $edgecolor3: rgb(35, 31, 32);
 
@@ -90,7 +90,7 @@ footer {
 }
 
 .edge-ad h4 {
-	color: $color4;
+	color: $color2;
 }
 
 
@@ -211,7 +211,8 @@ h6 {
 }
 
 .dropdown-menu li {
-	font-size: 1.35em;
+	font-size: 1.125em;
+	font-weight: 700;
 }
 
 
@@ -375,20 +376,13 @@ nav li {
 	text-align: right;
 }
 
-.photo1, .photo2 {
+.photo-bg {
 	-webkit-background-size: 100%;
 	background-size: 100%;
 	background-attachment: fixed;
-
 }
 
-.photo1 {
-	background-image: url(../img/30sportScope/DSC_0127.JPG);
-}
 
-.photo2 {
-	background-image: url(../img/30sportScope/DSC_0068.JPG);
-}
 
 .panel-home > .product {
 	padding-bottom: 15px;
