--- a/development/scss/style.scss
+++ b/development/scss/style.scss
@@ -501,14 +501,13 @@ nav li {
 	padding: 15px;
 }
 
-section {
-	margin-bottom: 45px;
+.dark-container {
+	padding-top: 15px;
+	padding-bottom: 15px;
 }
 
-.light-container {
-	padding: 15px;
-	border-bottom-right-radius: 4px;
-	border-bottom-left-radius: 4px;
+section {
+	margin-bottom: 45px;
 }
 
 blockquote {
